--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@datastax/astra-db-ts": "^1.0.0",
+    "@datastax/astra-db-ts": "0.1.4",
     "@types/node": "^20.8.10",
     "ai": "^2.2.20",
-    "express": "^4.19.2",
     "geist": "^1.1.0",
     "langchain": "^0.0.179",
     "next": "14.0.1",
