--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@datastax/astra-db-ts": "^1.0.0",
     "@types/node": "^20.8.10",
     "ai": "^2.2.20",
+    "express": "^4.19.2",
     "geist": "^1.1.0",
     "langchain": "^0.0.179",
     "next": "14.0.1",
