--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@datastax/astra-db-ts": "^0.1.4",
+    "@datastax/ragstack-ai": "^0.1.1",
     "@types/node": "^20.8.10",
     "ai": "^2.2.20",
     "geist": "^1.1.0",
-    "langchain": "^0.0.179",
     "next": "14.0.1",
     "openai": "^4.14.2",
     "react": "^18",
@@ -25,13 +24,33 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@datastax/astra-db-ts": "^0.1.4",
+    "@langchain/azure-openai": "^0.0.2",
+    "@langchain/community": "^0.0.33",
+    "@langchain/core": "^0.1.36",
+    "@langchain/openai": "^0.0.26",
     "@types/react": "^18.2.37",
     "autoprefixer": "^10",
+    "cassandra-driver": "^4.7.2",
     "dotenv": "^16.3.1",
     "eslint": "^8",
     "eslint-config-next": "13.5.5",
     "eslint-config-prettier": "^9.0.0",
+    "langchain": "^0.1.23",
+    "langsmith": "^0.1.8",
     "postcss": "^8",
     "tailwindcss": "^3"
+  },
+  "overrides": {
+    "dependencies": {
+      "@datastax/astra-db-ts": "0.1.4",
+      "@langchain/azure-openai": "0.0.2",
+      "@langchain/community": "0.0.33",
+      "@langchain/core": "0.1.36",
+      "@langchain/openai": "0.0.26",
+      "cassandra-driver": "4.7.2",
+      "langchain": "0.1.23",
+      "langsmith": "0.1.8"
+    }
   }
 }
